--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ log = "0.4"
 env_logger = "0.11"
 once_cell = "1.19.0"
 ureq = { version = "2.9.5", optional = true }
+anstyle-svg = "0.1.3"
 
 [features]
 default = ["web_image"]
