build: exclude test images from cargo upload

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ homepage = "https://github.com/FineFindus/artem"
 repository = "https://github.com/FineFindus/artem"
 keywords = ["text", "ascii", "ascii-art", "terminal"]
 categories = ["command-line-utilities", "multimedia::images"]
+#exclude test image files from cargo upload
+exclude = ["/assets", "/examples"]
 
 #build file
 build = "build.rs"
